--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -3,6 +3,7 @@
 }
 
 #rowContainer {
+	width: 1100px;
 	margin: auto;
 }
 
@@ -16,5 +17,5 @@
 	width: 200px;
 	height: 385px;
 
-	background-color: gray;
+	background-color: white;
 }
