--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -1,11 +1,33 @@
 
 #settings {
-	width: 300px;
-	height: 400px;
+	width: 100%;
+	height: 100%;
 	background-color: orange;
 	z-index: 10;
+	position: absolute;
+	top: 0;
+	left: 0;
 
 	float: right;
 
 	display: none;
+}
+
+#settingsTitle {
+	z-index: 5;
+	position: relative;
+	width: 95%;
+	margin: auto;
+	margin-top: 5px;
+}
+
+#settingsHTML {
+	width: 100%;
+	height: 340px;
+	overflow-y: auto;
+	position: absolute;
+	z-index: 1;
+	padding: 5px;
+
+	font-size: 10pt;
 }
