--- a/public/css/rightPanel.css
+++ b/public/css/rightPanel.css
@@ -11,13 +11,21 @@
 	overflow-y: none;
 }
 
+#titleSelect {
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+	outline: none !important;
+	border: 0px thick red;
+}
+
 #reddit {
 	width: 100%;
 	height: 100%;
 	position: relative;
 }
 
-#redditTitle {
+#redditHeader {
 	z-index: 5;
 	position: relative;
 }
