--- a/public/css/rightPanel.css
+++ b/public/css/rightPanel.css
@@ -11,12 +11,25 @@
 	overflow-y: none;
 }
 
-#titleSelect {
+#redditSelect {
 	width: 100%;
-	height: 100%;
+	height: 41px;
+	opacity: 0;
+	font-size: 10pt;
+	font-weight: 0;
 	background-color: transparent;
-	outline: none !important;
-	border: 0px thick red;
+	z-index: 5;
+}
+
+#redditTitle {
+	width: 100%;
+	height: 41px;
+	z-index: 0;
+	position: absolute;
+}
+
+#redditOption {
+	font-size: 10pt;
 }
 
 #reddit {
