--- a/public/css/rightPanel.css
+++ b/public/css/rightPanel.css
@@ -21,11 +21,28 @@
 	z-index: 5;
 }
 
-#redditTitle {
+#redditHeaderDisplayInterior {
+	width: 95%;
+	height: 95%;
+	padding: 5px;
+	margin: auto;
+	border: 1px outset white;
+}
+
+#redditHeaderDisplay {
 	width: 100%;
 	height: 41px;
 	z-index: 0;
 	position: absolute;
+	padding: 5px;
+}
+
+#redditTitle {
+	float: left;
+}
+
+#downArrowButton {
+	float: right;
 }
 
 #redditOption {
