--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -13,6 +13,28 @@
 	float: left;
 }
 
+#profileHTML {
+	height: 100%;
+	width: 100%;
+}
+
+#profileDescription {
+	
+}
+
+#profileImage {
+	width: 124px;
+	height: 109px;
+	border: 2px outset black;
+	margin: auto;
+}
+
+#container {
+	width: 100%;
+	height: 100%;
+	padding: 5px;
+}
+
 #profile {
 	width: 200px;
 	height: 385px;
